Fixed styling for search bar
Search bar border is no longer messed up, button and bar are spaced out and of equal height, and button now had hover effects, for cleaner overall look

--- a/src/App.css
+++ b/src/App.css
@@ -9,19 +9,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 20px;
 }
 
 .search-bar{
   width: 50%;
-  border-color: lightcoral;
+  border: 2px solid lightcoral;
   padding: 10px;
+  height: 15px;
 }
 
 .search-button{
-  background: lightcoral;
+  margin-left: 10px;
+  height: 40px;
+  width: 90px;
+  background: rgb(238, 138, 138);
   border: none;
   padding: 10px 20px;
   color: white;
+}
+
+.search-button:hover {
+  border: 3px solid red;
 }
 
 .recipes {
